# cloud-native-datascience

./: .gitignore  Dockerfile  Makefile  README.md  format.sh  pyproject.toml  stylecheck.sh
clientside/: main.py  requirements.txt
clientside/app/: app_data.py  auth.py  session_handler.py  user.py
clientside/app/client/: api_gateway.py
clientside/app/domains/: base.py  document.py  jobs.py  project.py  user.py  utils.py
clientside/app/pages/: doc_download.py  doc_upload.py  history.py  job_status.py  project_init.py  start_translation.py  welcome.py
clientside/app/usecases/: __init__.py  documents.py  exceptions.py  jobs.py  projects.py
dev_script/: create_sample_docx.py  marian_mt_test.py
lfs/documents/: demo.docx  german_demo.docx  paragraphs.txt
lfs/models/v0.0.1/: .gitignore
oq_testing_templates/: Step-Function.md  log_insights.md
resources/db/: create-db.ipynb  db-schema.yaml
serverside/init/: add_artifact_metadata.py
serverside/lambdas/: create_lambda.sh
serverside/lambdas/create_job/: build.sh  create_job.py  domainmodel.py  nb-deploy-create-job.ipynb  nb-dev-create-job.ipynb
serverside/lambdas/create_project/: build.sh  create_project.py  format.sh  nb-deploy-create-project.ipynb  nb-dev-create-project.ipynb  nb-pytest-create-project.ipynb
serverside/lambdas/document_added/: build.sh  doc_added.py  domainmodel.py  format.sh  nb-deploy-doc-added.ipynb  nb-dev-doc-added.ipynb
serverside/lambdas/get_german_document/: build.sh  domainmodel.py  format.sh  get_german_doc.py  nb-deploy-get-german-doc.ipynb  nb-dev-get-german-doc.ipynb  (+1 more)
(+56 files in other folders)
